{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 209,
  "lineage": "7ceffcff-2f14-e61c-eecb-e1b5c81aac90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:vpc-endpoint/vpce-08f10fdd93d5dc223",
            "cidr_blocks": [
              "35.71.109.0/24",
              "52.94.6.0/24"
            ],
            "id": "vpce-08f10fdd93d5dc223",
            "owner_id": "140023399909",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-48a54021",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-019a6133665132ea5",
              "rtb-0ddd0383b5b457636"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.dynamodb",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "DynamoDB-VPC-Endpoint-vpc-04822ca6ec54f7c38"
            },
            "tags_all": {
              "Name": "DynamoDB-VPC-Endpoint-vpc-04822ca6ec54f7c38"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_region.current",
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_nat_gateway.nat",
            "module.dev_vpc.aws_route_table.private",
            "module.dev_vpc.aws_route_table.public",
            "module.dev_vpc.aws_route_table_association.private",
            "module.dev_vpc.aws_route_table_association.public",
            "module.dev_vpc.aws_subnet.private",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main",
            "module.prd_vpc.aws_eip.nat",
            "module.prd_vpc.aws_internet_gateway.gw",
            "module.prd_vpc.aws_nat_gateway.nat",
            "module.prd_vpc.aws_route_table.private",
            "module.prd_vpc.aws_route_table.public",
            "module.prd_vpc.aws_route_table_association.private",
            "module.prd_vpc.aws_route_table_association.public",
            "module.prd_vpc.aws_subnet.private",
            "module.prd_vpc.aws_subnet.public",
            "module.prd_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:loadbalancer/app/examforge-dev-alb/96baab7c52e693cd",
            "arn_suffix": "app/examforge-dev-alb/96baab7c52e693cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "examforge-dev-alb-861194224.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:loadbalancer/app/examforge-dev-alb/96baab7c52e693cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "examforge-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-053337e2e02201cd8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031e8bdcf9c67afcd"
              },
              {
                "subnet_id": "subnet-0f9476096be92286f"
              }
            ],
            "subnets": [
              "subnet-031e8bdcf9c67afcd",
              "subnet-0f9476096be92286f"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_ecs.aws_security_group.alb",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:listener/app/examforge-dev-alb/96baab7c52e693cd/0290282dcd5bb9be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:listener/app/examforge-dev-alb/96baab7c52e693cd/0290282dcd5bb9be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:loadbalancer/app/examforge-dev-alb/96baab7c52e693cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_ecs.aws_lb.main",
            "module.dev_ecs.aws_security_group.alb",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:listener/app/examforge-dev-alb/96baab7c52e693cd/28516920abdf3b0d",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:140023399909:certificate/bfcf784f-d07a-49f7-ab6f-7e7e8edb7f62",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:targetgroup/examforge-dev-tg/df9d00b2df9cb54e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:listener/app/examforge-dev-alb/96baab7c52e693cd/28516920abdf3b0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:loadbalancer/app/examforge-dev-alb/96baab7c52e693cd",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_ecs.aws_lb.main",
            "module.dev_ecs.aws_lb_target_group.app",
            "module.dev_ecs.aws_security_group.alb",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:targetgroup/examforge-dev-tg/df9d00b2df9cb54e",
            "arn_suffix": "targetgroup/examforge-dev-tg/df9d00b2df9cb54e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:targetgroup/examforge-dev-tg/df9d00b2df9cb54e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:140023399909:loadbalancer/app/examforge-dev-alb/96baab7c52e693cd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "examforge-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "examforge-dev-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "examforge-dev-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:security-group/sg-053337e2e02201cd8",
            "description": "Allows HTTP/HTTPS traffic to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053337e2e02201cd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "examforge-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "140023399909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "examforge-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "examforge-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ecs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:security-group/sg-06b84d77d628424e4",
            "description": "Allows traffic only from ALB to ECS Tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b84d77d628424e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Access from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053337e2e02201cd8"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "examforge-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "140023399909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "examforge-dev-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "examforge-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_ecs.aws_security_group.alb",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0429b8c9d796a0ea2",
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:elastic-ip/eipalloc-0429b8c9d796a0ea2",
            "association_id": "eipassoc-039bf20f7d88fa2ca",
            "domain": "vpc",
            "id": "eipalloc-0429b8c9d796a0ea2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0fb8ec65fc9c9a405",
            "private_dns": "ip-10-0-1-52.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.52",
            "public_dns": "ec2-15-165-6-252.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.6.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c842cb1193eca1d",
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:elastic-ip/eipalloc-03c842cb1193eca1d",
            "association_id": "eipassoc-0dbc8b966275677ec",
            "domain": "vpc",
            "id": "eipalloc-03c842cb1193eca1d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-098e4b8a6f808edf5",
            "private_dns": "ip-10-0-2-163.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.163",
            "public_dns": "ec2-43-202-23-8.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.23.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:internet-gateway/igw-0dcc54cdd684b5042",
            "id": "igw-0dcc54cdd684b5042",
            "owner_id": "140023399909",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0429b8c9d796a0ea2",
            "association_id": "eipassoc-039bf20f7d88fa2ca",
            "connectivity_type": "public",
            "id": "nat-09073437cb2244e00",
            "network_interface_id": "eni-0fb8ec65fc9c9a405",
            "private_ip": "10.0.1.52",
            "public_ip": "15.165.6.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f9476096be92286f",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c842cb1193eca1d",
            "association_id": "eipassoc-0dbc8b966275677ec",
            "connectivity_type": "public",
            "id": "nat-0714971f1fcd1b2ca",
            "network_interface_id": "eni-098e4b8a6f808edf5",
            "private_ip": "10.0.2.163",
            "public_ip": "43.202.23.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031e8bdcf9c67afcd",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:route-table/rtb-0ddd0383b5b457636",
            "id": "rtb-0ddd0383b5b457636",
            "owner_id": "140023399909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09073437cb2244e00",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_nat_gateway.nat",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:route-table/rtb-019a6133665132ea5",
            "id": "rtb-019a6133665132ea5",
            "owner_id": "140023399909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0714971f1fcd1b2ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_nat_gateway.nat",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:route-table/rtb-0f6df21d90c132755",
            "id": "rtb-0f6df21d90c132755",
            "owner_id": "140023399909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcc54cdd684b5042",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b504495bbacda1b5",
            "route_table_id": "rtb-0ddd0383b5b457636",
            "subnet_id": "subnet-0f53c522448a085eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_nat_gateway.nat",
            "module.dev_vpc.aws_route_table.private",
            "module.dev_vpc.aws_subnet.private",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0421dcc325e685c87",
            "route_table_id": "rtb-019a6133665132ea5",
            "subnet_id": "subnet-066201e844089b2b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_eip.nat",
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_nat_gateway.nat",
            "module.dev_vpc.aws_route_table.private",
            "module.dev_vpc.aws_subnet.private",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d27cf52b3b64bb6c",
            "route_table_id": "rtb-0f6df21d90c132755",
            "subnet_id": "subnet-0f9476096be92286f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_route_table.public",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b389b8b81f7192",
            "route_table_id": "rtb-0f6df21d90c132755",
            "subnet_id": "subnet-031e8bdcf9c67afcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.gw",
            "module.dev_vpc.aws_route_table.public",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:subnet/subnet-0f53c522448a085eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f53c522448a085eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140023399909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:subnet/subnet-066201e844089b2b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066201e844089b2b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140023399909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:subnet/subnet-0f9476096be92286f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9476096be92286f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140023399909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:subnet/subnet-031e8bdcf9c67afcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031e8bdcf9c67afcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140023399909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-04822ca6ec54f7c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:140023399909:vpc/vpc-04822ca6ec54f7c38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029a7555d2c39add8",
            "default_route_table_id": "rtb-0e88cfb2fe1426aa9",
            "default_security_group_id": "sg-0e8d9e259452673ab",
            "dhcp_options_id": "dopt-0fcde9fcbe4bcb833",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04822ca6ec54f7c38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e88cfb2fe1426aa9",
            "owner_id": "140023399909",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}